<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/padding10dp"
    android:layout_marginHorizontal="@dimen/margin20dp"
    android:paddingVertical="@dimen/padding10dp"
    android:layout_marginTop="@dimen/margin5dp"
    android:background="@drawable/back_validator"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvChainId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chain_id"
        android:fontFamily="@font/font_med"
        android:textSize="@dimen/font14dp"
        android:textColor="@color/color_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="@dimen/font14dp"
        android:fontFamily="@font/font_regular"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/margin5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChainId" />

    <TextView
        android:id="@+id/tvValidatorName"
        android:layout_width="wrap_content"
        android:textColor="@color/color_text"
        android:layout_height="wrap_content"
        android:text="@string/valid_name"
        android:fontFamily="@font/font_regular"
        android:textSize="@dimen/font14dp"
        android:layout_marginTop="@dimen/margin5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

    <TextView
        android:id="@+id/tvTx"
        android:layout_width="wrap_content"
        android:fontFamily="@font/font_regular"
        android:textColor="@color/color_text"
        android:layout_height="wrap_content"
        android:text="@string/tx"
        android:textSize="@dimen/font14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>