<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/padding10dp"
    android:layout_marginTop="@dimen/margin5dp"
    android:paddingVertical="@dimen/padding20dp"
    android:background="@drawable/back_valid_click"
    android:layout_marginHorizontal="@dimen/margin20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:fontFamily="@font/font_black"
        android:textColor="@color/color_text"
        android:textSize="@dimen/font20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChainId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chain_id"
        android:textSize="@dimen/font15dp"
        android:textColor="@color/color_text"
        android:fontFamily="@font/font_med"
        android:layout_marginTop="@dimen/margin10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <TextView
        android:id="@+id/tvHeadVotingPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font15dp"
        android:text="@string/voting_power"
        android:fontFamily="@font/font_med"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/margin5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChainId" />


    <TextView
        android:id="@+id/tvHeadCurrentAPY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_apy"
        android:textSize="@dimen/font15dp"
        android:fontFamily="@font/font_med"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/margin5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadVotingPower" />

    <TextView
        android:id="@+id/tvHeadSelfBonded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_bonded"
        android:textSize="@dimen/font15dp"
        android:fontFamily="@font/font_med"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/margin5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadCurrentAPY" />

    <TextView
        android:id="@+id/tvHeadCommissionRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5dp"
        android:text="@string/commission_rate"
        android:textColor="@color/color_text"
        android:textSize="@dimen/font15dp"
        android:fontFamily="@font/font_med"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadSelfBonded" />


    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/color_text"
        android:textSize="@dimen/font15dp"
        android:fontFamily="@font/font_regular"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeading" />


    <TextView
        android:id="@+id/tvVotingPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font15dp"
        android:text="@string/voting_power"
        android:textColor="@color/color_data"
        android:fontFamily="@font/font_regular"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeadVotingPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeadVotingPower" />


    <TextView
        android:id="@+id/tvCurrentAPY"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font15dp"
        android:layout_height="wrap_content"
        android:text="@string/current_apy"
        android:fontFamily="@font/font_regular"
        android:textColor="@color/color_green"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeadCurrentAPY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeadCurrentAPY" />

    <TextView
        android:id="@+id/tvSelfBonded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_regular"
        android:textSize="@dimen/font15dp"
        android:text="@string/self_bonded"
        android:textColor="@color/color_data"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeadSelfBonded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeadSelfBonded" />

    <TextView
        android:id="@+id/tvCommissionRate"
        android:layout_width="wrap_content"
        android:textColor="@color/color_data"
        android:textSize="@dimen/font15dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_regular"
        android:text="@string/commission_rate"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeadCommissionRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeadCommissionRate" />


</androidx.constraintlayout.widget.ConstraintLayout>