<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.praveen.funxdemo.appUI.validDetails.ValidDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/color_bg"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="@dimen/widthHeight55dp"
            android:layout_height="@dimen/widthHeight55dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:padding="@dimen/padding10dp"
            android:src="@drawable/img_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_black"
            android:textColor="@color/color_text"
            android:textSize="@dimen/font25dp"
            android:text="@string/validator_details"
            app:layout_constraintBottom_toBottomOf="@+id/ibBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ibBack" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin20dp"
                    android:background="@drawable/back_validator"
                    android:paddingHorizontal="@dimen/padding10dp"
                    android:paddingVertical="@dimen/padding20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivIcon"
                        android:layout_width="@dimen/widthHeight20dp"
                        android:layout_height="@dimen/widthHeight20dp"
                        android:src="@drawable/img_fx"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin5dp"
                        android:fontFamily="@font/font_med"
                        android:text="@{viewModel.FName}"
                        android:textColor="@color/color_text"
                        app:layout_constraintBottom_toBottomOf="@+id/ivIcon"
                        app:layout_constraintStart_toEndOf="@+id/ivIcon"
                        app:layout_constraintTop_toTopOf="@+id/ivIcon" />

                    <TextView
                        android:id="@+id/tvValName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin5dp"
                        android:fontFamily="@font/font_med"
                        android:text="@{viewModel.FValidator}"
                        android:textColor="@color/color_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:fontFamily="@font/font_regular"
                        android:text="@{viewModel.FAddress}"
                        android:textColor="@color/color_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvValName" />

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin5dp"
                        android:fontFamily="@font/font_regular"
                        android:text="@{viewModel.FDesc}"
                        android:textColor="@color/color_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />


                    <ImageView
                        android:id="@+id/ivWebsite"
                        android:layout_width="@dimen/widthHeight35dp"
                        android:layout_height="@dimen/widthHeight35dp"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:src="@drawable/img_globe"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

                    <ImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="@dimen/widthHeight35dp"
                        android:layout_height="@dimen/widthHeight35dp"
                        android:layout_marginStart="@dimen/margin10dp"
                        android:src="@drawable/img_email"
                        app:layout_constraintBottom_toBottomOf="@+id/ivWebsite"
                        app:layout_constraintStart_toEndOf="@+id/ivWebsite"
                        app:layout_constraintTop_toTopOf="@+id/ivWebsite" />


                    <TextView
                        android:id="@+id/tvHeadCurrentApy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding20dp"
                        android:fontFamily="@font/font_med"
                        android:text="@string/current_apy"
                        android:textColor="@color/color_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivWebsite" />

                    <TextView
                        android:id="@+id/tvHeadVotePower"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding5dp"
                        android:fontFamily="@font/font_med"
                        android:text="@string/voting_power"
                        android:textColor="@color/color_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvHeadCurrentApy" />

                    <TextView
                        android:id="@+id/tvHeadRate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding5dp"
                        android:fontFamily="@font/font_med"
                        android:text="@string/current_rate"
                        android:textColor="@color/color_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvHeadVotePower" />


                    <TextView
                        android:id="@+id/tvCurrentApy"
                        android:layout_width="0dp"
                        android:textColor="@color/color_data"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding20dp"
                        android:fontFamily="@font/font_regular"
                        android:text="@{viewModel.FCurrentAyp}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivWebsite" />

                    <TextView
                        android:id="@+id/tvVotePower"
                        android:layout_width="0dp"
                        android:textColor="@color/color_data"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@{viewModel.FVotingPower}"
                        app:layout_constraintBottom_toBottomOf="@+id/tvHeadVotePower"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvHeadVotePower" />

                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="0dp"
                        android:textColor="@color/color_data"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@{viewModel.FRate}"
                        app:layout_constraintBottom_toBottomOf="@+id/tvHeadRate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvHeadRate" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvBlockHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin20dp"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:fontFamily="@font/font_black"
                    android:text="@string/blocks"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/font25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBlock"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBlockHeading" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>