<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/color_bg"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin20dp"
            android:text="@string/funxdemo"
            android:fontFamily="@font/font_black"
            android:textColor="@color/color_text"
            android:textSize="@dimen/font25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:elevation="@dimen/margin3dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFxHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/font_med"
                    android:textColor="@color/color_text"
                    android:padding="@dimen/padding20dp"
                    android:text="@string/function_x_price"
                    android:textSize="@dimen/font18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFxHead" />

                <TextView
                    android:id="@+id/tvFxPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10dp"
                    android:fontFamily="@font/font_heavy"
                    android:gravity="center"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/font30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivExc" />

                <ImageView
                    android:id="@+id/ivUniswap"
                    android:layout_width="@dimen/widthHeight32dp"
                    android:layout_height="@dimen/widthHeight32dp"
                    android:src="@drawable/img_uniswap"
                    android:layout_marginEnd="@dimen/margin10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivExc"
                    app:layout_constraintEnd_toStartOf="@+id/ivExc"
                    app:layout_constraintTop_toTopOf="@+id/ivExc" />

                <ImageView
                    android:id="@+id/ivExc"
                    android:layout_width="@dimen/widthHeight24dp"
                    android:layout_height="@dimen/widthHeight24dp"
                    android:src="@drawable/img_convert"
                    android:layout_marginTop="@dimen/margin30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFxHead" />

                <ImageView
                    android:id="@+id/ivFunx"
                    android:layout_width="@dimen/widthHeight32dp"
                    android:layout_height="@dimen/widthHeight32dp"
                    android:src="@drawable/img_fx_logo"
                    android:layout_marginStart="@dimen/margin10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivExc"
                    app:layout_constraintStart_toEndOf="@+id/ivExc"
                    app:layout_constraintTop_toTopOf="@+id/ivExc" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardValidList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin20dp"
            android:elevation="@dimen/margin3dp"
            android:layout_marginTop="@dimen/margin20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/back_valid_click"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvValidHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/padding20dp"
                    android:text="@string/show_validator_list"
                    android:textSize="@dimen/font18dp"
                    android:fontFamily="@font/font_med"
                    android:textColor="@color/color_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvValidHead" />

                <ImageView
                    android:id="@+id/ivValidator"
                    android:layout_width="@dimen/widthHeight70dp"
                    android:layout_height="@dimen/widthHeight70dp"
                    android:layout_marginVertical="@dimen/margin20dp"
                    android:gravity="center"
                    android:src="@drawable/img_valid"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvValidHead" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>